--- a/11. Objects/index.html
+++ b/11. Objects/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1>JS</h1>
 </body>
-<script src="1.objectsBasics.js"></script>
+<script src="2.iterateObject.js"></script>
 </html>
